src/styles/App.css
/* ... */
@media (min-width: 980px) and (max-width: 1250px) {
  /*HEADER*/
  .headerContainer {
    max-width: 85%;
    grid-template-columns: auto 1fr;
  }

  .headerCenter {
    justify-content: flex-start;
  }

  .headerRight {
    justify-content: flex-end;
    gap: 1rem;
  }

  .headerImage {
    max-width: 300px;
  }

  .headerNavBtn {
    padding: 0.6rem 1.2rem;
    font-size: 1.2rem;
  }
  /*HEADER*/

  /*FILTER BUTTONS*/
  .filterButtonContainer {
    width: 75%;
  }
  /*FILTER BUTTONS END*/

  /*GRID*/
  .pokemonGrid {
    grid-template-columns: repeat(3, 1fr);
  }
  /*GRID END*/
}

@media (min-width: 1250px) {
  /*HOME PAGE*/
  .headerLeft {
    display: flex;
    justify-content: flex-start;
  }

  .headerImage {
    max-width: 310px;
  }

  .headerNavBtn {
    padding: 0.2rem 1.4rem;
    font-size: 1.2rem;
  }

  .profileAvatarImg {
    width: 64px;
    height: 64px;
  }

  .dropdownItem {
    padding: 1rem 1.4rem;
    font-size: 16px;
  }

  /*SEARCHBAR*/
  .searchBarContainer {
    max-width: 520px;
    padding: 8px 14px;
    border-radius: 14px;
  }

  .searchBarDiv {
    gap: 10px;
    margin: 24px 0;
  }

  .searchBarDiv label {
    font-size: 18px;
  }

  .searchBarDiv input {
    font-size: 17px;
    padding: 12px;
    max-width: 400px;
  }

  .searchBarAndClearBtn {
    max-width: 360px;
    gap: 12px;
  }

  .searchBarAndClearBtn input {
    font-size: 17px;
    padding: 12px 44px 12px 14px;
  }

  .clearSearchButton {
    font-size: 20px;
    right: 12px;
  }

  .searchBarButton {
    font-size: 15px;
    padding: 10px 16px;
    border-radius: 10px;
  }

  .randomBtnWrapper {
    gap: 30px;
    margin-top: 14px;
  }

  .randomPokemonButton,
  .clearFilterButton {
    font-size: 15px;
    padding: 12px 18px;
  }

  .biggerRandomButton {
    max-width: 350px;
    gap: 6px;
  }
  /*SEARCHBAR END*/

  .pokemonGrid {
    max-width: 90%;
  }

  .pokemon-card {
    max-width: 240px;
    padding: 18px;
    max-height: 380px;
  }

  .displayCardPokemonSprite {
    width: 120px;
    height: 120px;
    margin-bottom: 18px;
  }

  .pokemon-card h3 {
    font-size: 1.4rem;
  }

  .pokemon-card p {
    font-size: 0.8rem;
  }

  .linkToDetailsPageButton {
    font-size: 15px;
    padding: 8px 16px;
    border-radius: 22px;
  }

  .linkToDetailsPageButton svg {
    font-size: 18px;
  }

  .audioButton {
    width: 46px;
    height: 46px;
    font-size: 26px;
  }

  .filledIcon {
    font-size: 2rem;
  }

  .favoriteButtonContainer button {
    padding: 6px;
  }

  .uiAuthInfoText {
    font-size: 1.1rem;
  }

  .statLabel,
  .statValue {
    font-size: 1.4rem;
  }

  /*HOME PAGE END*/

  /*LOGIN/REGISTER*/
  .uiCard {
    max-width: 1200px;
    border-radius: 28px;
  }

  .uiCardBody {
    display: flex;
    justify-content: space-evenly;
  }

  .uiAuthInfoText {
    font-size: 20px;
    font-weight: 600;
  }

  .registerTitle {
    font-size: 2rem;
  }

  .uiAuthLinkText {
    font-size: 16px;
  }

  .loginFormSpecific {
    padding: 25px;
    height: 350px;
    display: flex;
    font-size: 18px;
    justify-content: space-evenly;
  }

  /*LOGIN/REGISTER END*/

  /*LEADERBOARD PAGE*/
  .leaderboardPageTitle {
    font-size: 2.2rem;
  }

  .leaderboardTrophyPic {
    width: 80px;
    height: 80px;
  }
  /*LEADERBOARD PAGE END*/
}

